--- a/.github/workflows/CD_PROD_AWS_Workflow.yml
+++ b/.github/workflows/CD_PROD_AWS_Workflow.yml
@@ -56,5 +56,5 @@ jobs:
           application_name: rjscart-live
           environment_name: Rjscart-live-env
           version_label: "ver-${{ github.sha }}"
-          region: eu-central-1
+          region: us-east-1
           deployment_package: deploy.zip
