--- a/.github/workflows/CD_PROD_AWS_Workflow.yml
+++ b/.github/workflows/CD_PROD_AWS_Workflow.yml
@@ -55,6 +55,6 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: rjscart-live
           environment_name: Rjscart-live-env
-          version_label: "ver-${{ github.sha }}"
+          version_label: ver-${{ github.sha }}-${{ github.run_id }}
           region: us-east-1
           deployment_package: deploy.zip
