--- a/.github/workflows/CD_PROD_AWS_Workflow.yml
+++ b/.github/workflows/CD_PROD_AWS_Workflow.yml
@@ -58,3 +58,4 @@ jobs:
           version_label: ver-${{ github.sha }}-${{ github.run_id }}
           region: us-east-1
           deployment_package: deploy.zip
+          use_existing_version_if_available: "true"
