--- a/shopping/Dockerfile
+++ b/shopping/Dockerfile
@@ -1,19 +1,19 @@
 FROM node:16
 
 # Set working directory
-WORKDIR /app
+WORKDIR /app/shopping
 
 # Copy package.json and package-lock.json (if present)
-COPY shopping/package*.json ./shopping/
+COPY package.json .
 
 # Install dependencies for the shopping service
-RUN npm install --prefix shopping
+RUN npm install
 
-# Copy the shopping service code
-COPY shopping ./shopping
+# Copy the rest of the application code
+COPY . .
 
 # Expose the service port
 EXPOSE 8003
 
 # Start the service
-CMD ["npm", "start", "--prefix", "shopping"]
+CMD ["npm", "start"]
