--- a/.github/workflows/CD_QA_AWS_Workflow.yml
+++ b/.github/workflows/CD_QA_AWS_Workflow.yml
@@ -77,11 +77,10 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: rjscart
-          environment_name: Rjscart-env
-          version_label: "ver-${{ github.sha }}"
+          environment_name: Rjscart-env 
+          version_label: "ver-${{ github.sha }}-${{ github.run_id }}"
           region: us-east-1
           deployment_package: deploy.zip
-          use_existing_version_if_available: true
         env:
           DEBUG: true
 
