--- a/.github/workflows/CD_QA_AWS_Workflow.yml
+++ b/.github/workflows/CD_QA_AWS_Workflow.yml
@@ -81,6 +81,7 @@ jobs:
           version_label: "ver-${{ github.sha }}-${{ github.run_id }}"
           region: us-east-1
           deployment_package: deploy.zip
+          use_existing_version_if_available : true
         env:
           DEBUG: true
 
