--- a/.github/workflows/CD_QA_AWS_Workflow.yml
+++ b/.github/workflows/CD_QA_AWS_Workflow.yml
@@ -76,27 +76,11 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: kjapp
-          environment_name: Kjapp-env 
+          application_name: rjscart
+          environment_name: Rjscart-env 
           version_label: "ver-${{ github.sha }}-${{ github.run_id }}"
           region: us-east-1
           deployment_package: deploy.zip
           use_existing_version_if_available : true
         env:
           DEBUG: true
-
-       # Additional debugging: Check for running containers in EBS
-      - name: Check Elastic Beanstalk Health and Logs
-        run: |
-          echo "Checking Elastic Beanstalk environment health"
-          aws elasticbeanstalk describe-environments --environment-names Rjscart-env --region us-east-1
-          echo "Fetching logs from Elastic Beanstalk"
-          aws elasticbeanstalk retrieve-environment-info --info-type tail --environment-name Rjscart-env --region us-east-1
-          
-      # Wait for deployment and check health of the environment
-      - name: Wait for environment to be healthy
-        run: |
-          echo "Waiting for Elastic Beanstalk environment to stabilize"
-          sleep 60  # Wait for 60 seconds before checking health status again
-          echo "Checking Elastic Beanstalk environment health status"
-          aws elasticbeanstalk describe-environments --environment-names Rjscart-env --region us-east-1
